[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/ui/nine.png" type="Texture" id=1]
[ext_resource path="res://assets/items/7.png" type="Texture" id=2]
[ext_resource path="res://assets/items/8.png" type="Texture" id=3]
[ext_resource path="res://assets/items/1.png" type="Texture" id=4]
[ext_resource path="res://assets/items/4.png" type="Texture" id=5]
[ext_resource path="res://assets/items/6.png" type="Texture" id=6]
[ext_resource path="res://assets/items/5.png" type="Texture" id=7]
[ext_resource path="res://assets/items/2.png" type="Texture" id=8]
[ext_resource path="res://assets/items/3.png" type="Texture" id=9]
[ext_resource path="res://assets/EpilepsySans.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/EpilepsySansBold.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://presets/Theme.tres" type="Theme" id=12]
[ext_resource path="res://scripts/Inventory.gd" type="Script" id=13]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=10]
size = 18
outline_color = Color( 0.858824, 0.882353, 0.713726, 1 )
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=11]
size = 13
font_data = ExtResource( 10 )

[node name="Inventory" type="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 400.0
margin_right = -30.0
margin_bottom = -30.0
texture = ExtResource( 1 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 18.0
margin_right = -24.0
margin_bottom = -18.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slots" type="Control" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot0" type="Button" parent="Control/Slots"]
margin_right = 60.0
margin_bottom = 60.0
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Control/Slots/Slot0"]
position = Vector2( 30, 30 )
scale = Vector2( 2, 2 )
frames = SubResource( 9 )

[node name="Count" type="Label" parent="Control/Slots/Slot0"]
margin_left = 40.0
margin_top = 40.0
margin_right = 60.0
margin_bottom = 60.6875
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="Button" parent="Control/Slots"]
margin_left = 70.0
margin_right = 130.0
margin_bottom = 60.0
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Control/Slots/Slot1"]
position = Vector2( 30, 30 )
scale = Vector2( 2, 2 )
frames = SubResource( 9 )

[node name="Count" type="Label" parent="Control/Slots/Slot1"]
margin_left = 40.0
margin_top = 40.0
margin_right = 62.0
margin_bottom = 61.0
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot2" type="Button" parent="Control/Slots"]
margin_left = 140.0
margin_top = 0.529999
margin_right = 200.0
margin_bottom = 60.53
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Control/Slots/Slot2"]
position = Vector2( 30, 30 )
scale = Vector2( 2, 2 )
frames = SubResource( 9 )

[node name="Count" type="Label" parent="Control/Slots/Slot2"]
margin_left = 40.0
margin_top = 40.0
margin_right = 62.0
margin_bottom = 62.0
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot3" type="Button" parent="Control/Slots"]
margin_left = 210.0
margin_right = 270.0
margin_bottom = 60.0
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Control/Slots/Slot3"]
position = Vector2( 30, 30 )
scale = Vector2( 2, 2 )
frames = SubResource( 9 )

[node name="Count" type="Label" parent="Control/Slots/Slot3"]
margin_left = 40.0
margin_top = 40.0
margin_right = 62.0
margin_bottom = 62.0
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot4" type="Button" parent="Control/Slots"]
margin_top = 70.0
margin_right = 60.0
margin_bottom = 130.0
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Control/Slots/Slot4"]
position = Vector2( 30, 30 )
scale = Vector2( 2, 2 )
frames = SubResource( 9 )

[node name="Count" type="Label" parent="Control/Slots/Slot4"]
margin_left = 40.0
margin_top = 40.0
margin_right = 60.0
margin_bottom = 60.6875
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot5" type="Button" parent="Control/Slots"]
margin_left = 70.0
margin_top = 70.0
margin_right = 130.0
margin_bottom = 130.0
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Control/Slots/Slot5"]
position = Vector2( 30, 30 )
scale = Vector2( 2, 2 )
frames = SubResource( 9 )

[node name="Count" type="Label" parent="Control/Slots/Slot5"]
margin_left = 40.0
margin_top = 40.0
margin_right = 62.0
margin_bottom = 61.0
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot6" type="Button" parent="Control/Slots"]
margin_left = 140.0
margin_top = 70.53
margin_right = 200.0
margin_bottom = 130.53
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Control/Slots/Slot6"]
position = Vector2( 30, 30 )
scale = Vector2( 2, 2 )
frames = SubResource( 9 )

[node name="Count" type="Label" parent="Control/Slots/Slot6"]
margin_left = 40.0
margin_top = 40.0
margin_right = 62.0
margin_bottom = 62.0
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot7" type="Button" parent="Control/Slots"]
margin_left = 210.0
margin_top = 70.0
margin_right = 270.0
margin_bottom = 130.0
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Control/Slots/Slot7"]
position = Vector2( 30, 30 )
scale = Vector2( 2, 2 )
frames = SubResource( 9 )

[node name="Count" type="Label" parent="Control/Slots/Slot7"]
margin_left = 40.0
margin_top = 40.0
margin_right = 62.0
margin_bottom = 62.0
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Detail" type="Control" parent="Control"]
margin_left = 280.0
margin_right = 495.0
margin_bottom = 131.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Control/Detail"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 10 )
text = "Select an item"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="Control/Detail"]
margin_left = 3.0
margin_top = 29.0
margin_right = 217.0
margin_bottom = 98.0
custom_fonts/normal_font = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonUse" type="Button" parent="Control/Detail"]
margin_left = 4.67194
margin_top = 103.45
margin_right = 48.6719
margin_bottom = 128.45
theme = ExtResource( 12 )
disabled = true
text = "Use"

[node name="ButtonDrop" type="Button" parent="Control/Detail"]
margin_left = 59.4004
margin_top = 103.45
margin_right = 110.4
margin_bottom = 128.45
theme = ExtResource( 12 )
disabled = true
text = "Drop"
